# crossref

./: .gitignore  LICENSE  README.md  example_config.yaml  notes.txt  pyproject.toml
.github/workflows/: tests.yml
crossref/: __init__.py  compare.py  comparison.py  document.py  documents.py  main.py  parser.py  parsing.py  preprocessing.py  results.py  semantic.py  utils.py  word.py
crossref/metrics/: __init__.py  base.py  semantic.py  statistical.py  syntactic.py
crossref/scorer/: base.py  semantic.py  word.py
documents/: bookofmormon.md  bookofmormon.txt
documents/Book_of_Mormon/01_1_Nephi/: 00_Chapter_1.txt  12_Chapter_13.txt
documents/Book_of_Mormon/02_2_Nephi/: 05_Chapter_6.txt  16_Chapter_17.txt  25_Chapter_26.txt  29_Chapter_30.txt  31_Chapter_32.txt
documents/Book_of_Mormon/08_Mosiah/: 06_Chapter_7.txt  08_Chapter_9.txt  12_Chapter_13.txt  14_Chapter_15.txt  15_Chapter_16.txt  22_Chapter_23.txt  23_Chapter_24.txt
documents/Book_of_Mormon/09_Alma/: 03_Chapter_4.txt  09_Chapter_10.txt  16_Chapter_17.txt  19_Chapter_20.txt  20_Chapter_21.txt  48_Chapter_49.txt  53_Chapter_54.txt  54_Chapter_55.txt  60_Chapter_61.txt
documents/Book_of_Mormon/10_Helaman/: 06_Chapter_7.txt  14_Chapter_15.txt
documents/Book_of_Mormon/11_3_Nephi/: 27_Chapter_28.txt
documents/Book_of_Mormon/13_Mormon/: 02_Chapter_3.txt
documents/Book_of_Mormon/14_Ether/: 09_Chapter_10.txt
documents/bookofmormon/: 00_Title_Page.txt  01_1_Nephi.txt  02_2_Nephi.txt  03_Jacob.txt  04_Enos.txt  05_Jarom.txt  06_Omni.txt  07_Words_of_Mormon.txt  08_Mosiah.txt  09_Alma.txt  10_Helaman.txt  11_3_Nephi.txt  12_4_Nephi.txt  13_Mormon.txt  14_Ether.txt  15_Moroni.txt  book_of_mormon.json  parse.py
fixtures/: all_config.yaml  bom_config.yaml  bom_dc_config.yaml  bom_nt_config.yaml  genesis_config.yaml  nt_dc_config.yaml
fixtures/documents/: kjvnewtestament.md  kjvoldtestament.md
fixtures/documents/Doctrine_and_Covenants/: 00_Section_1.txt  01_Section_2.txt  04_Section_5.txt  05_Section_6.txt  06_Section_7.txt  07_Section_8.txt  100_Section_101.txt  103_Section_104.txt  104_Section_105.txt  107_Section_108.txt  108_Section_109.txt  111_Section_112.txt  114_Section_115.txt  118_Section_119.txt  119_Section_120.txt  120_Section_121.txt  126_Section_127.txt  128_Section_129.txt  133_Section_134.txt  134_Section_135.txt  135_Section_136.txt  137_Section_138.txt  14_Section_15.txt  15_Section_16.txt  16_Section_17.txt  20_Section_21.txt  21_Section_22.txt  30_Section_31.txt  33_Section_34.txt  35_Section_36.txt  40_Section_41.txt  42_Section_43.txt  43_Section_44.txt  48_Section_49.txt  50_Section_51.txt  51_Section_52.txt  53_Section_54.txt  54_Section_55.txt  59_Section_60.txt  60_Section_61.txt  (+16 more)
fixtures/documents/The_Book_of_Mormon/: 00_Title_Page.txt
fixtures/documents/The_Book_of_Mormon/01_1_Nephi/: 13_Chapter_14.txt  16_Chapter_17.txt
fixtures/documents/The_Book_of_Mormon/02_2_Nephi/: 04_Chapter_5.txt  08_Chapter_9.txt  30_Chapter_31.txt
fixtures/documents/The_Book_of_Mormon/03_Jacob/: 04_Chapter_5.txt  05_Chapter_6.txt
fixtures/documents/The_Book_of_Mormon/08_Mosiah/: 02_Chapter_3.txt  11_Chapter_12.txt
fixtures/documents/The_Book_of_Mormon/09_Alma/: 13_Chapter_14.txt  18_Chapter_19.txt  24_Chapter_25.txt  38_Chapter_39.txt  46_Chapter_47.txt  57_Chapter_58.txt
fixtures/documents/The_Book_of_Mormon/10_Helaman/: 00_Chapter_1.txt  04_Chapter_5.txt  05_Chapter_6.txt
old/: parse.py
tests/: all_config.yaml  bom_config.yaml  bom_dc_config.yaml  bom_nt_config.yaml  config.yaml  conftest.py  nt_dc_config.yaml  test_compare.py  test_documents.py  test_metrics_base.py  test_metrics_syntactic.py  test_preprocessing.py  test_results.py
tests/documents/: bookofmormon.md  doctrineandcovenants.md  doctrineandcovenants.txt
tests/documents/Doctrine_and_Covenants/: 02_Section_3.txt  03_Section_4.txt  08_Section_9.txt  09_Section_10.txt  101_Section_102.txt  102_Section_103.txt  105_Section_106.txt  106_Section_107.txt  109_Section_110.txt  10_Section_11.txt  110_Section_111.txt  112_Section_113.txt  113_Section_114.txt  116_Section_117.txt  11_Section_12.txt  121_Section_122.txt  122_Section_123.txt  123_Section_124.txt  127_Section_128.txt  129_Section_130.txt  130_Section_131.txt  131_Section_132.txt  132_Section_133.txt  136_Section_137.txt  138_Official_Declaration_1.txt  139_Official_Declaration_2.txt  13_Section_14.txt  17_Section_18.txt  18_Section_19.txt  19_Section_20.txt  22_Section_23.txt  23_Section_24.txt  25_Section_26.txt  26_Section_27.txt  27_Section_28.txt  28_Section_29.txt  29_Section_30.txt  31_Section_32.txt  32_Section_33.txt  34_Section_35.txt  (+28 more)
(+1169 files in other folders)
