[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crossref"
version = "0.0.1"
description = "CrossRef: A Python package for automated document cross-referencing"
readme = "README.md"
requires-python = ">=3.11"
license-files = [ "LICENSE" ]
keywords = ["cross-referencing", "document similarity"]
authors = [{ name = "Griffin Holt", email = "griffinbholt@gmail.com" }]
maintainers = [{ name = "Griffin Holt", email = "griffinbholt@gmail.com" }]

# Classifiers help users find your project by categorizing it.
#
# # For a list of valid classifiers, see https://pypi.org/classifiers/
# classifiers = [
#   "Development Status :: 1 - Not Ready",
#   "Intended Audience :: Researchers",
#   "License :: OSI Approved :: MIT License",
#   "Programming Language :: Python :: 3.11",
#   "Programming Language :: Python :: 3.12",
#   "Programming Language :: Python :: 3.13",
#   "Programming Language :: Python :: 3 :: Only",
# ]

# TODO: Determine versions
dependencies = [
    "compose",                # preprocessing.py
    "gensim",                 # semantic.py
    "nltk",                   # syntactic.py
    "numpy",                  # base.py, semantic.py
    "pyyaml",                 # main.py
    "sentence_transformers",  # semantic.py
    "torch",                  # semantic.py
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install sampleproject[dev]
#
# Optional dependencies the project provides. These are commonly
# referred to as "extras". For a more extensive definition see:
# https://packaging.python.org/en/latest/specifications/dependency-specifiers/#extras
# [project.optional-dependencies]
# dev = ["check-manifest"]
# test = ["coverage"]

# List URLs that are relevant to your project (TODO)
[project.urls]
"Homepage" = "https://github.com/griffinbholt/crossref"
"Bug Reports" = "https://github.com/griffinbholt/crossref/issues"
"Source" = "https://github.com/griffinbholt/crossreft/"

[project.scripts]
crossref = "crossref:main"

[tool.setuptools]
packages = { find = { include = ["crossref*"] } }